--- a/test.html
+++ b/test.html
@@ -1,45 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 掛bootstrap -->
-    <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
-    <!-- 掛fontawesome -->
-    <link rel="stylesheet" href="./fontawesome/css/fontawesome.css">
-    <title>ShopCart</title>
+    <title>CreateEvent</title>
 </head>
-
-
 <body>
-    <h1>Danhjan fffffffffghghffff</h1>
-    <header>
+    <h6></h6>
+    <h3></h3>
+    <span></span>
+    <input type="file">
+    <div>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            </div>
-        </nav>
-
-
-    </header>
-
-    <!-- JQ -->
-    <script src="./libary/jquery-3.5.1.js"></script>
-
-    <!-- Boostrap JS -->
-    <script src="./bootstrap/js/bootstrap.bundle.js"></script>
-
+    </div>
+    <input type="text">
+    <input type="date" name="" id="">
+    <input type="range" name="" id="">
+    <input type="text">
+    <input type="text">
 </body>
-
 </html>
